# ir_proj

./: .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  README.md  pack.sh  pyproject.toml  start.ps1  start.sh
backend/: pyproject.toml
backend/app/: config.py  engine.py  eval.py  main.py  models.py
backend/app/core/: boolean_search.py  highlighter.py  indexer.py  parser.py  phrase_search.py  preprocessor.py  query_expansion.py  soundex.py  tfidf.py
backend/app/routers/: index.py  search.py
frontend/: index.html
frontend/src/: App.vue  api.js  main.js  style.css
frontend/src/components/: BooleanSearch.vue  DocumentModal.vue  ExpandedSearch.vue  IndexViewer.vue  PhraseSearch.vue  ResultList.vue  SearchWorkspace.vue  SoundexSearch.vue
report/: build_docx.py  capture_ui.sh  demo_script.md  gen_figures.py  patch_docx.py  rebuild_keep_cover.py  render_math.py  report.docx  report.md  theme_ir.py  uno_export_pdf.py
report/figures/: boolean_search_flow.drawio  index_construction_flow.drawio  phrase_search_flow.drawio  preprocessing_flow.drawio  query_expansion_flow.drawio  screenshot.py  system_architecture.drawio
report/flows/: gen_flows.py
