[project]
name = "ir-proj"
version = "0.1.0"
description = "Cranfield IR search engine — course project"
requires-python = ">=3.12"
dependencies = [
    # backend
    "fastapi>=0.135.3",
    "nltk>=3.9.4",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.44.0",
    # report / figures
    "plotnine>=0.14",
    "pandas>=2.2",
    "numpy>=2.0",
]

[dependency-groups]
report = [
    "python-docx>=1.1",
]
